--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,26 @@
             <version>3.141.59</version>
         </dependency>
         <!-- Autres dépendances -->
+            
+    
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+        
+        <!-- Selenium dependency -->
+        
+        <dependency>
+            <groupId>io.github.bonigarcia</groupId>
+            <artifactId>webdrivermanager</artifactId>
+            <version>4.3.1</version>
+        </dependency>
     </dependencies>
+    
+  
+         
     
     <build>
         <plugins>
